force-app/main/default/objects/Consensus_Invoice__c/Consensus_Invoice__c.object-meta.xml
<CustomObject>
    <label>Consensus Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Oracle Invoice ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consensus Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>