force-app/main/default/objects/Consensus_Invoice__c/fields/Consensus_Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consensus Invoice Line Item</label>
    <referenceTo>Consensus_Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Consensus Invoices</relationshipLabel>
    <relationshipName>Consensus_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>