force-app/main/default/objects/Consensus_Invoice__c/fields/Consensus_Total_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Total_Order_Amount__c</fullName>
    <label>Consensus Total Order Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>