force-app/main/default/objects/Consensus_Invoice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Consensus Invoices</relationshipLabel>
    <relationshipName>Consensus_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>