force-app/main/default/objects/Consensus_Invoice__c/fields/Total_Invoice_Amount_consensus__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_consensus__c</fullName>
    <label>Total Invoice Amount</label>
    <summarizedField>Consensus_Invoice_Line_Item__c.Consensus_Amount_Breakdown__c</summarizedField>
    <summaryForeignKey>Consensus_Invoice_Line_Item__c.Consensus_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>